[package]
name = "client_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rand = "0.8"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "benchmark_failure"
path = "src/benchmark_failure.rs"

